kubernetes/04-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: easyshop-deployment
  namespace: easyshop-ns
  labels:
    app: easyshop

spec:
  replicas: 3
  selector:
    matchLabels:
      app: easyshop

  template:
    metadata:
      labels:
        app: easyshop 
    
    spec:
      containers:
      - name: easyshop-container
        image: hiimanshupawar/easyshop:ec86423fc6ff6d99d888297af5aef01277f94161
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "500Mi"
            cpu: "300m"
          limits:
            memory: "800Mi"
            cpu: "500m"
