kubernetes/07-statefulSet.yml
kind: StatefulSet
apiVersion: apps/v1

metadata:
  name: easyshop-statefulset
  namespace: easyshop-ns
  labels:
    app: mongodb

spec:
  serviceName: "mongodb-service"
  selector:
    matchLabels:
      app: mongodb # has to match .spec.template.metadata.labels
  replicas: 3 # by default is 1


  template:
    metadata:
      labels:
        app: mongodb # has to match .spec.selector.matchLabels
    
    spec:
      containers:
      - name: mongodb-container
        image: mongo:7.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-vol
          mountPath: /data/db
        resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

  volumeClaimTemplates:
  - metadata:
      name: mongodb-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp2  # use 'gp2' storage class for AWS EKS, if using Kind cluster, you can use 'standard' storage class
      resources:
        requests:
          storage: 5Gi



#when using EKS cluster for your project, ensure you have installed the required csi driver for AWS EBS storage provider. You can install it using the following command:

# 1) kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/aws-ebs-csi-driver/v1.28.0/deploy/kubernetes/overlays/stable/rbac-full.yaml
# 2) You can also use the AWS Console to install the EBS CSI driver

#your pvc won't be bounded to pv until the csi driver is installed. it will be in pending state.
