kubernetes/05-easyshop-service.yml
kind: Service
apiVersion: v1
metadata:
  name: easyshop-service
  namespace: easyshop-ns
  
spec:
  type: LoadBalancer
  selector:
    app: easyshop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31500
