kubernetes/08-mongodb-service.yml
kind: Service
apiVersion: v1

metadata:
  name: mongodb-service
  namespace: easyshop-ns

spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
